<resources>
    <string name="app_name">hukukengtrsozluk</string>
    <string name="tv_law">Hukuk Sözlüğü</string>
    <string name="tv_law_subtitle">İngilizce ve Türkçe olarak yüzlerce hukuk kelimesi  bir arada.</string>
    <string name="tv_word_learn">Kelime Öğrenme</string>
    <string name="tv_word_subtitle">İngilizce ve Türkçe kelimelerle \nalıştırma yapın</string>
    <string name="tv_words_search">Kelime Arama</string>
    <string name="tv_words_search_subtitle">Yüzlerce İngilizce - Türkçe \nhukuk kelimesini bulabilirsin.</string>
    <string name="tv_word_favorite">Favorilerim</string>
    <string name="tv_favorite_subtitle">Favorilerine eklediğin  \nkelimeleri burada bulabilirsin.</string>
    <string name="tv_about_us">Hakkımızda</string>
    <string name="tv_about_us_subtitle">Uygulama hakkında bilgiler \nve daha fazlası..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="law_dict">Hukuk Sözlüğü</string>
    <string name="word_learn">Kelime Öğrenme</string>
    <string name="learn_exercise">Hukuk - İngilizce Alıştırma</string>
    <string name="tv_info">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500\'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960\'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</string>
    <string name="application_id">WZFSBELAA6</string>
    <string name="api_key">4c14584cc213e038c3cd6a24650bda91</string>
    <string name="index_name">words</string>
</resources>
